--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name ="description" content="ポートフォリオサイト">
     <link rel="stylesheet" href="stylesheet.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="responsive.css">
     <title>Portfolio</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
