--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
                 <h2>WORKS</h2>
                 <ul>
                     <li>
-                <a class="aaa"href="https://hiroki6944.github.io/pu/">【Category】オリジナル作品【Title】Music Collection 【Skill】HTML/CSS/jQuery/PHP 【Detail】自分のお気に入りの音楽を共有できるサービスです。</a>
+                <a class="aaa"href="https://hiroki6944.github.io/pu/">【Category】オリジナル作品【Title】Music Collection <br>【Skill】HTML/CSS/jQuery/PHP 【Detail】自分のお気に入りの音楽を共有できるサービスです。</a>
                     </li>
                     <li>
-                <a class="bbb"href="https://hiroki6944.github.io/pg/">【Category】オリジナル作品 【Title】Hot Spring Channel 【Skill】HTML/CSS/jQuery/PHP 【Detail】温泉好き同士が交流できる掲示板サービスです。</a>
+                <a class="bbb"href="https://hiroki6944.github.io/pg/">【Category】オリジナル作品 【Title】Hot Spring Channel <br>【Skill】HTML/CSS/jQuery/PHP 【Detail】温泉好き同士が交流できる掲示板サービスです。</a>
                 </li>
                 </ul>
             </div>
