--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 
                 
             </div>
-            <div class="unko">
+            <div class="unko5">
                 <P>※正式なお見積もりは、別途ご相談させていただきます。</P>
             </div>
         </div>
