--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <div class="header">
-        <div class="header-container">
+        <div class="container">
             <h1 class="names">Hiroki KAWASHIMA's Portfolio</h1>
             <p class="iii">-Web Engineer-</p>
             
@@ -24,7 +24,7 @@
 
 
     <div class="top-wrapper">
-        <div class="top-container">
+        <div class="container">
             <div class="top-contents">
                 <h2>ABOUT ME</h2>
             </div>
@@ -54,7 +54,7 @@
 
 
     <div class="skill-wrapper">
-        <div class="skill-container">
+        <div class="container">
             <div class="skill">
                 <h2>SKILLS</h2>
                 <ul>
@@ -72,7 +72,7 @@
 
 
     <div class="service-wrapper">
-        <div class="service-container">
+        <div class="container">
             <div class="heading">
                 <h2>SERVICE</h2>
             </div>
@@ -110,7 +110,7 @@
 
 
     <div class="work-wrapper">
-        <div class="work-container">
+        <div class="container">
             <div class="work-contents">
                 <h2>WORKS</h2>
                 <ul>
@@ -129,7 +129,7 @@
 
 
     <div class="footer">
-        <div class="footer-container">
+        <div class="container">
             <div class="footer-contents">
                 <h2>CONTACT</h2>
                 <p>メールアドレス: k.wa6944@icloud.com</p>
